tests/snapshots/snapshots/cli_help_test__list_help.snap
---
source: tests/snapshots/cli_help_test.rs
expression: help_output
---
List entities

Usage: ttr list [OPTIONS] <COMMAND>

Commands:
  companies  List all companies
  projects   List all projects
  tasks      List all tasks
  resources  List all resources
  help       Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose  Enable verbose output (alias for --debug)
      --debug    Enable debug output (alias for --verbose)
  -q, --quiet    Enable quiet output (minimal information)
  -h, --help     Print help
