tests/snapshots/snapshots/cli_help_test__main_help.snap
---
source: tests/snapshots/cli_help_test.rs
assertion_line: 16
expression: help_output
---
A powerful, flexible, and transparent project management tool that puts you in control. CLI-first design with beautiful HTML outputs.

Usage: ttr [OPTIONS] <COMMAND>

Commands:
  init         Initialize the project management system
  workspace    Initialize workspace with examples (onboarding)
  create       Create new entities
  list         List entities
  update       Update entities
  delete       Delete entities
  link         Link entities
  unlink       Remove links
  report       Generate reports
  validate     Validate system
  build        Build static site
  template     Template management
  task         Task management
  resource     Resource management
  schedule     Schedule management
  budget       Budget management
  cost         Cost management
  query        Query entities with filtering
  search       Search across all files
  migrate      Migration tools
  serve        Serve HTML files locally
  completions  Generate shell completions
  timezone     Timezone management and global coordination
  agile        Agile methodologies support (Scrum/Kanban)
  test-data    Test data validation and management
  help         Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose    Enable verbose output (alias for --debug)
      --debug      Enable debug output (alias for --verbose)
  -q, --quiet      Enable quiet output (minimal information)
      --json-logs  Output logs in JSON format
  -h, --help       Print help
  -V, --version    Print version
