tests/snapshots/snapshots/cli_help_test__validate_help.snap
---
source: tests/snapshots/cli_help_test.rs
expression: help_output
---
Validate system

Usage: ttr validate [OPTIONS] <COMMAND>

Commands:
  business-rules  Validate business rules
  data-integrity  Validate data integrity
  entities        Validate entities
  system          Validate system
  help            Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose  Enable verbose output (alias for --debug)
      --debug    Enable debug output (alias for --verbose)
  -q, --quiet    Enable quiet output (minimal information)
  -h, --help     Print help
